--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      apiKey: "AIzaSyAeRNRtS-6pz8X0Y5lyYWovxyqcKATTQ3U",
+      authDomain: "fichasprarpg.firebaseapp.com",
+      projectId: "fichasprarpg",
+      storageBucket: "fichasprarpg.appspot.com",
+      messagingSenderId: "310575702724",
+      appId: "1:310575702724:web:71ba24f72ac2e5a99fdf91"
     };
 
     // Initialize Firebase
